--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Kefir na dar - sajt za razmenu zrnaca kefira</title>
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" rel="stylesheet">
 </head>
 <body>
 <div id="app"></div>
 <script src="/js/main.js"></script>
+<script crossorigin="anonymous" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     kefirnadar.configuration.core.start();
 </script>
