--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,5 +12,6 @@
 <script>
     kefirnadar.configuration.core.start();
 </script>
+<script src="https://kit.fontawesome.com/59fc276a52.js" crossorigin="anonymous"></script>
 </body>
 </html>
