--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kefir na dar - sajt za razmenu zrnaca kefira</title>
+    <title>Kefir na dar - platforma za razmenu zrnaca kefira</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <script crossorigin="anonymous"
+            src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v16.0&appId=1869115913469264&autoLogAppEvents=1"
+            nonce="uw2Nzuzt"></script>
 </head>
 <body>
 <div id="app"></div>
 <script src="/js/main.js"></script>
 <script>
     kefirnadar.configuration.core.start();
+
 </script>
 <script src="https://kit.fontawesome.com/59fc276a52.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
