--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,9 +7,9 @@
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <script crossorigin="anonymous"
-            src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v16.0&appId=1869115913469264&autoLogAppEvents=1"
-            nonce="uw2Nzuzt"></script>
+<!--    <script crossorigin="anonymous"-->
+<!--            src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v16.0&appId=1869115913469264&autoLogAppEvents=1"-->
+<!--            nonce="uw2Nzuzt"></script>-->
 </head>
 <body>
 <div id="app"></div>
