--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="min-height: 100vh;">
 <head>
     <meta charset="UTF-8">
     <title>Kefir na dar - platforma za razmenu zrnaca kefira</title>
@@ -7,16 +7,15 @@
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <script crossorigin="anonymous"
-            src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v16.0&appId=1869115913469264&autoLogAppEvents=1"
-            nonce="uw2Nzuzt"></script>
+    <!--    <script crossorigin="anonymous"-->
+    <!--            src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v16.0&appId=1869115913469264&autoLogAppEvents=1"-->
+    <!--            nonce="uw2Nzuzt"></script>-->
 </head>
 <body>
 <div id="app"></div>
-<script src="/js/main.js"></script>
+<script src="/js/main.js?v=123456"></script>
 <script>
     kefirnadar.configuration.core.start();
-
 </script>
 <script src="https://kit.fontawesome.com/59fc276a52.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
